force-app/main/default/objects/custom_create150__c/custom_create150__c.object-meta.xml
<CustomObject>
    <label>Custom created object150</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects150</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>