force-app/main/default/objects/custom_create150__c/fields/custom_create_150field593__c.field-meta.xml
<CustomField>
    <fullName>custom_create_150field593__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 150field593</label>
    <type>Checkbox</type>
</CustomField>